[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc"
path = "src/main.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
chrono = "0.4.24"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"

tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9.2"
