[package]
name = "terminal-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal-ui"
path = "src/main.rs"

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
sysinfo = "0.29.0"
#termion = "2.0.1"
#tui = { version = "0.19", default-features = false, features = ['termion'] }
#tokio = { version = "1", features = [""] }