[package]
name = "terminal-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal_ui"
path = "src/lib.rs"

[[bin]]
name = "terminal-ui"
path = "src/main.rs"

[dependencies]
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
#tui = "0.19.0"
crossterm = "0.26.1"
sysinfo = "0.29.0"
#termion = "2.0.1"
#tui = { version = "0.19.0", default-features = false }
#tokio = { version = "1", features = [""] }